--- a/index.html
+++ b/index.html
@@ -72,17 +72,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="text-uppercase">About</h2>
-                    <h3 class="text-muted section-subheading">Lorem ipsum dolor sit amet consectetur.</h3><video controls>
-  <source src="assets/videos/video.mp4" type="video/video.mp4">
+                    <h2 class="text-uppercase">About</h2><video controls>
+  <source src="assets/videos/video.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video></div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="list-group timeline">
-                        <li class="list-group-item timeline-inverted"></li>
-                    </ul>
+                    <ul class="list-group timeline"></ul>
                 </div>
             </div>
         </div>
