--- a/index.html
+++ b/index.html
@@ -52,21 +52,22 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="text-uppercase section-heading">Services</h2>
-                    <h3 class="text-muted section-subheading">Lorem ipsum dolor sit amet consectetur</h3>
+                    <h3 class="text-muted section-subheading">Join the club for a lifetime experience</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="typcn typcn-group-outline fa-stack-1x fa-inverse"></i></span>
-                    <h4 class="section-heading">Certified Instructors</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="section-heading">Join the best</h4>
+                    <p class="text-muted">Your transformation is our passion. We are your personal trainer, nutrionist, supplement expert, lifting partner, support group. We provide th technology, tools and produts you need to burn fat, build muscle and calm your mind. Become
+                        your best self.</p>
                 </div>
                 <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-shield fa-stack-1x fa-inverse"></i></span>
                     <h4 class="section-heading">Modern Equipments</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">With our most modern equipments and trained experts you are in good hands and our passion is to make you ready</p>
                 </div>
                 <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-yahoo fa-stack-1x fa-inverse"></i></span>
-                    <h4 class="section-heading">Yoga</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="section-heading">Why us</h4>
+                    <p class="text-muted">Certified<br>Professional<br>Experienced<br>Modern Simulators<br>For Men &amp; Women<br>Yoga For All</p>
                 </div>
             </div>
         </div>
@@ -182,10 +183,10 @@
                                     <div class="col-12">
                                         <div class="static-map"><a rel="noopener" href="https://www.google.com/maps/place/Daytona+International+Speedway/@29.1815062,-81.0744275,15z/data=!4m13!1m7!3m6!1s0x88e6d935da1cced3:0xa6b3e1bc0f2fc83a!2s1801+W+International+Speedway+Blvd,+Daytona+Beach,+FL+32114!3b1!8m2!3d29.187028!4d-81.0703076!3m4!1s0x88e6d949a4cb8593:0x1387c6c0b5c8cc97!8m2!3d29.1851681!4d-81.0705292"
                                                 target="_blank"> </a></div><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCYxEbxUaBYkUi7bCy8_jr4TKdm9bapDkw&amp;q=Roots+Fitness+House+%26+Yoga+Zone&amp;zoom=20"
-                                            width="100%" height="400"></iframe></div>
+                                            width="100%" height="400" style="width: 440px;height: 336px;"></iframe></div>
                                     <div class="col-sm-6 col-md-12 col-lg-6">
-                                        <h2 class="h4"><i class="fa fa-user"></i>&nbsp;Info</h2>
-                                        <div><span><strong>Name</strong></span></div>
+                                        <div>
+                                            <h2 class="h4" style="margin-top: 30px;"><i class="fa fa-user"></i>&nbsp;Info</h2><span><strong>Name</strong></span></div>
                                         <div><span>Roots Fitness Club</span></div>
                                         <div><span>Health Club Pathnamthitta</span></div>
                                         <hr class="d-sm-none d-md-block d-lg-none">
