--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Roots Fitness Club</title>
     <meta property="og:image" content="assets/img/cover.png">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/isolated-layout.svg">
